Basic structure set up

--- a/css/esci.css
+++ b/css/esci.css
@@ -2,7 +2,7 @@
 Program       esci.css
 Author        Gordon Moore
 Date          14 July 2020
-Description   CSS for ESCI
+Description   Basic CSS for ESCI
 Licence       GNU General Public LIcence Version 3, 29 June 2007
 */
 
@@ -65,4 +65,81 @@ input[type=text] {
   font-size: var(--fontsize);
 }
 
-/*-------------------------------------------------------------------------------------------*/
+/*------------------------------------------Main Panel-------------------------------------------------*/
+
+#main {
+  /*split into left and right panels*/
+  display: grid;
+  grid-template-columns: 40rem auto;
+  grid-column-gap: 8px;
+  height: 100%;
+} 
+
+/*--------------------------------------------Left Panel-----------------------------------------------*/
+
+#leftpanel {
+  border: 2px solid black; 
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+}
+
+/*-------------------------------------------Main heading-----------------------------------------------*/
+#header {
+  border: 1px solid black;
+  display: grid;
+  grid-template-columns: 5rem 12rem auto 2rem;
+}
+
+#logoimg {
+  max-width: 4rem;
+  max-height: 4rem;
+}
+
+#mainheading {
+  font-size: 2.5rem;
+} 
+
+#subheading {
+  margin-left: 1.0rem;
+  padding: 0.4rem;
+  font-size: 2.0rem;
+}
+
+#tooltipsonoff {
+  border: 1px solid black;
+  background-color: lightgrey;
+  height: 1.5rem;
+  width: 1.4rem;
+  margin-top: 0.8rem;
+  text-align: center;
+  border-radius: 1rem;
+}
+
+/*--------------------------------------------Menu items-----------------------------------------------*/
+
+
+/*--------------------------------------------Footer----------------------------------------------------*/
+
+#footer {
+  float:left;
+  bottom: 5px;
+
+  border: 1px solid black;
+  color: #0c43f8;
+  background-color: #e8eef0e3;
+  padding: 0.3rem;
+  clear: both;
+  width: auto;
+}
+
+#footer:hover {
+  background-color: palegreen;
+}
+
+#footer:active {
+  background-color: green;
+}
+
+
+/*--------------------------------------------right Panel-----------------------------------------------*/
+
