More initial setup

--- a/css/esci-web.css
+++ b/css/esci-web.css
@@ -1,5 +1,5 @@
 /*
-Program       esci.css
+Program       esci-web.css
 Author        Gordon Moore
 Date          14 July 2020
 Description   CSS for esci-web (menu)
