--- a/css/esci-web.css
+++ b/css/esci-web.css
@@ -11,6 +11,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 0.0.1         Initial version
 0.1.0          2020-07-25 The first attempt
 0.1.3
+0.1.4   2020-08-07  Just adjusted font size of menu items and allowed some padding on main image at right
 
 #endregion */
 
@@ -33,7 +34,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
   margin-top: 20px;
   margin-right: 10px;
   padding: 1.0rem;
-  font-size: 2.5rem;
+  font-size: 2.2rem;
 }
 
 .menus:hover {
@@ -67,6 +68,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 #bkimage {
   width: 40rem;
   height: 60rem;
+  padding-right: 5rem;
 }
 
 #blurb {
