--- a/css/esci-web.css
+++ b/css/esci-web.css
@@ -12,6 +12,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 0.1.0          2020-07-25 The first attempt
 0.1.3
 0.1.4   2020-08-07  Just adjusted font size of menu items and allowed some padding on main image at right
+0.1.5   2020-08-07  More slight adjustments to right panel
 
 #endregion */
 
@@ -61,7 +62,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 
 #bookimage {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 45rem auto;
   margin: 5rem;
 }
 
