--- a/css/esci-web.css
+++ b/css/esci-web.css
@@ -13,6 +13,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 0.1.3
 0.1.4   2020-08-07  Just adjusted font size of menu items and allowed some padding on main image at right
 0.1.5   2020-08-07  More slight adjustments to right panel
+0.1.6
 
 #endregion */
 
