--- a/css/esci-web.css
+++ b/css/esci-web.css
@@ -31,12 +31,14 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
   background-color: lemonchiffon;
   border: 2px solid blue;
   border-radius: 10px;
-  height: 4rem;
+  height: 2.0rem;
   margin-left: 10px;
-  margin-top: 20px;
+  margin-top: 10px;
   margin-right: 10px;
-  padding: 1.0rem;
-  font-size: 2.2rem;
+  padding-left: 1.0rem;
+  padding-top: 0.8rem;
+  padding-bottom: 1.0rem;
+  font-size: 1.8rem;
 }
 
 .menus:hover {
@@ -52,7 +54,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
   border-radius: 15px;
   margin: 3rem;
   padding: 1rem;
-  background-color: palegreen;
+  /* background-color: palegreen; */
   width: 50rem;
   font-size: 2.0rem;
 }
