--- a/css/esci-web.css
+++ b/css/esci-web.css
@@ -17,6 +17,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 0.1.9   2020-08-24  #1 Make changes re specification
 0.1.10  2020-08-25  #1 Added New Edition
 0.1.11  2020-08-25  #? Split see r into 2 menu items
+0.1.12  2020-08-26  #4 Tips added
 
 #endregion */
 
