--- a/css/esci-web.css
+++ b/css/esci-web.css
@@ -19,6 +19,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 0.1.11  2020-08-25  #? Split see r into 2 menu items
 0.1.12  2020-08-26  #4 Tips added
 0.1.13  2020-08-26  #3 Tweaks to words and colour
+0.1.14  2020-08-27  #3 Tweaks to words and colour
 
 #endregion */
 
@@ -34,7 +35,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 }
 
 .darkgrey {
-  color: darkgrey;
+  color: #1E1E1E;
 }
 
 .blue {
