--- a/css/esci.css
+++ b/css/esci.css
@@ -12,7 +12,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 
 0.1.16  2020-08-28  #5 esci-web Basic In development page added.
 0.1.17  2020-08-28  #5 v2 of Basic In development message added.
-
+0.1.18
 #endregion */
 
 
