--- a/css/esci.css
+++ b/css/esci.css
@@ -15,6 +15,8 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 0.1.18
 
 1.0.0   2020-09-03  Version 1.0.0
+1.0.1
+
 #endregion */
 
 
