--- a/css/esci.css
+++ b/css/esci.css
@@ -17,6 +17,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 1.0.0   2020-09-03  Version 1.0.0
 1.0.1
 1.0.2   2020-09-06  Make the releases 1.0.0
+1.0.3
 
 #endregion */
 
