--- a/css/esci-web.css
+++ b/css/esci-web.css
@@ -23,6 +23,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 0.1.15
 1.0.4   18 Oct 2020 Did tweaks to the menu image display to make smoother  
 1.0.5   18 Oct 2020 Make images clickable
+1.0.6
 
 #endregion */
 
