--- a/css/esci-web.css
+++ b/css/esci-web.css
@@ -24,6 +24,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 1.0.4   18 Oct 2020 Did tweaks to the menu image display to make smoother  
 1.0.5   18 Oct 2020 Make images clickable
 1.0.6
+1.0.7   6 Nov 2020 Consolidation of all programs into one github repository
 
 #endregion */
 
@@ -44,6 +45,10 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 
 .blue {
   color: blue;
+}
+
+#leftpanel {
+  grid-template-rows: auto 1fr auto !important;
 }
 
 /*-------------------------------------Menu items--------------------------------------------*/
