--- a/css/esci.css
+++ b/css/esci.css
@@ -89,7 +89,8 @@ input[type=text] {
 #leftpanel {
   border: 2px solid black; 
   display: grid;
-  grid-template-rows: auto 1fr auto;
+
+  grid-template-rows: auto 2rem 1fr auto;
 }
 
 /*-------------------------------------------Main heading-----------------------------------------------*/
@@ -123,6 +124,26 @@ input[type=text] {
   text-align: center;
   border-radius: 1rem;
 }
+
+/*--------------------------------------------Breadcrumbs----------------------------------------------*/
+
+#breadcrumbs {
+  border: 1px solid green;
+  font-size: 1.6rem;
+}
+
+
+#homecrumb {
+  color: red;
+}
+
+#homecrumb:hover {
+  color: green;
+}
+
+#homecrumb:active {
+  color: magenta;
+}										 
 
 /*--------------------------------------------Menu items-----------------------------------------------*/
 
