--- a/css/esci-correlation.css
+++ b/css/esci-correlation.css
@@ -18,6 +18,9 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 0.9.0  2020-09-05 #6 Remove TEST option, set version 0.9.0
 
 1.0.0  2020-09-06 Version 1.0.0
+
+1.1.0  6 Nov 2020 Rationalised into one repository
+
 #endregion */
 
 
