--- a/css/esci-dance-r.css
+++ b/css/esci-dance-r.css
@@ -21,6 +21,8 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 
 1.0.0   19 Oct 2020 Version 1
 
+1.1.0  6 Nov 2020 Rationalised into one repository
+
 #endregion */
 
 
