--- a/css/esci-dances.css
+++ b/css/esci-dances.css
@@ -50,6 +50,8 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 0.9.20      2020-08-25 #37 Red panel numbers
 
 1.0.0       2020-09-03 Version 1.0.0
+
+1.1.0  6 Nov 2020 Rationalised into one repository
 */
 
 
