--- a/css/esci-precision.css
+++ b/css/esci-precision.css
@@ -22,6 +22,8 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 0.1.16  3  Nov 2020 #3  Temporary display of 99th percentile
 0.1.22
 
+1.1.0  6 Nov 2020 Rationalised into one repository
+
 #endregion */
 
 /*temp calculation type*/
