--- a/css/esci-web.css
+++ b/css/esci-web.css
@@ -26,6 +26,8 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 1.0.6
 1.0.7   6 Nov 2020 Consolidation of all programs into one github repository
 
+1.1.0  6 Nov 2020 Rationalised into one repository
+
 #endregion */
 
 
