--- a/css/esci.css
+++ b/css/esci.css
@@ -19,6 +19,8 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 1.0.2   2020-09-06  Make the releases 1.0.0
 1.0.3
 
+1.1.0  6 Nov 2020 Rationalised into one repository
+
 #endregion */
 
 
