--- a/css/esci.css
+++ b/css/esci.css
@@ -269,7 +269,7 @@ input[type=text] {
   font-size: 3.0rem;
   border: solid 2px red;
   width: 80rem;
-  height: 15rem;
+  height: 20rem;
   text-align: center;
   position: absolute;
   top: 5rem;
@@ -282,4 +282,8 @@ input[type=text] {
 #close {
   color: black;
   padding: 3rem;
+}
+
+#pin {
+  width: 5rem;
 }
