--- a/css/esci-dance-r.css
+++ b/css/esci-dance-r.css
@@ -22,6 +22,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 1.0.0   19 Oct 2020 Version 1
 
 1.1.0  6 Nov 2020 Rationalised into one repository
+1.1.3  13 Nov 2020 #11 Remove italic from rho symbol in html - added greek3 and italic3 classes
 
 #endregion */
 
@@ -57,6 +58,15 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 
 .greek2 {
   font-size: 2.2rem;
+}
+
+.greek3 {
+  font-size: 1.5rem;
+}
+
+.italic3 {
+  font-style: italic;
+  font-size: 1.5rem;
 }
 
 .icons {
