--- a/css/esci-precision.css
+++ b/css/esci-precision.css
@@ -25,6 +25,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 1.1.0  6 Nov 2020 Rationalised into one repository
 1.1.5
 1.1.6  17 Nov 2020 #10 Reposition CI dropdown etc
+1.1.7
 
 #endregion */
 
